src/app/course/comments/comments.component.scss
:host {
  max-width: 536px;

  @media (max-width: 600px){
    margin: 1rem;
  }
}

mat-card {
  margin: 1rem 0;

  mat-card-header {

    margin-bottom: 1rem;

    mat-icon {
      font-size: 42px;
    }
  }
}

form {
  align-items: flex-start;
  display: flex;
  flex-direction: column;

  .comment-type {
    width: 135px;
  }

  .comment-text {
    flex-grow: 1;
    width: 100%;
  }
}

mat-list-item {

  height: auto !important;

  &:not(:last-child) {
    border-bottom: solid 1px #e0e0e0;
  }

  .mat-list-avatar {
    align-self: flex-start;
  }

  .comment {

    position: relative;

    .row2 {
      white-space: wrap !important;
    }

    .actions {
      position: absolute;
      top: 4px;
      right: 0;
    }

  }
}

.mat-list-base .mat-list-item .mat-line {
  white-space: normal !important;
}

.mat-list-base .mat-list-item.mat-2-line {
  height: auto;
}

